--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -2,11 +2,15 @@ services:
   db:
     image: postgres
     environment:
-      - POSTGRES_DB=drexel
       - POSTGRES_USER={dbUser}
       - POSTGRES_PASSWORD={dbPassword}
+      - POSTGRES_DB=drexel
+    expose:
+      - "5432"
     ports:
       - "5432:5432"
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
   app:
     build: .
     environment:
